--- a/.github/workflows/6588122java-ci.yml
+++ b/.github/workflows/6588122java-ci.yml
@@ -7,7 +7,7 @@ on:
 
   pull_request:
     branches:
-      - main  # Trigger on pull request to the main branch
+      - Weixian  # Trigger on pull request to the main branch
 
 jobs:
   build:
