--- a/.github/workflows/6588122java-ci.yml
+++ b/.github/workflows/6588122java-ci.yml
@@ -3,15 +3,14 @@ name: Java CI  # Workflow name
 on:
   push:
     branches:
-      - main  # Trigger on push to the main branch
-
+      - main  # Change to your main branch (or Weixian if it's your primary branch)
   pull_request:
     branches:
-      - Weixian  # Trigger on pull request to the main branch
+      - main
 
 jobs:
   build:
-    runs-on: ubuntu-latest  # Use the latest Ubuntu server
+    runs-on: ubuntu-latest  # Run on the latest Ubuntu server
 
     steps:
       - name: Checkout GitHub Repository
@@ -20,7 +19,7 @@ jobs:
       - name: Set Up JDK 17
         uses: actions/setup-java@v3
         with:
-          java-version: '17'  # You can change to 11 or 8 if needed
+          java-version: '17'  # Change to 11 or 8 if needed
           distribution: 'temurin'  # Use the OpenJDK distribution
 
       - name: Compile Java Code
