--- a/.github/workflows/6588122java-ci.yml
+++ b/.github/workflows/6588122java-ci.yml
@@ -1,32 +1,31 @@
-name: Java CI  # Workflow name
+name: Java CI
 
 on:
   push:
     branches:
-      - main  # Change to your main branch (or Weixian if it's your primary branch)
-  pull_request:
-    branches:
-      - main
+      - Weixian
 
 jobs:
   build:
-    runs-on: ubuntu-latest  # Run on the latest Ubuntu server
+    runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout GitHub Repository
-        uses: actions/checkout@v3  # Ensures code is pulled to GitHub server
+    - name: Checkout code
+      uses: actions/checkout@v3
+      with:
+        ref: ${{ github.event.pull_request.head.ref }}
+        fetch-depth: ${{ env.PR_FETCH_DEPTH }}
 
-      - name: Set Up JDK 17
-        uses: actions/setup-java@v3
-        with:
-          java-version: '17'  # Change to 11 or 8 if needed
-          distribution: 'temurin'  # Use the OpenJDK distribution
+    - name: Set up JDK
+      uses: actions/setup-java@v1
+      with:
+        java-version: '11' # You can change this to the version you want
 
-      - name: Compile Java Code
-        run: |
-          javac HolidayTravelVehicles/*.java  # Compile all Java files
-
-      - name: Run Java Application
+    - name: Compile Java
+      run: |
+        cd Nantipat/HolidayTravelVehicles 
+        javac -d . *.java
+      # Compile java file from directory
         run: |
           java -cp HolidayTravelVehicles Main  # Run Main.java
 
