--- a/.github/workflows/6588122java-ci.yml
+++ b/.github/workflows/6588122java-ci.yml
@@ -3,10 +3,10 @@ name: Java CI  # Workflow name
 on:
   push:
     branches:
-      - Weixian  # 你的主分支是 Weixian，所以要监听它
+      - Weixian  # 你的分支
   pull_request:
     branches:
-      - Weixian  # 监听 pull request 事件
+      - Weixian
 
 jobs:
   build:
@@ -14,7 +14,7 @@ jobs:
 
     steps:
       - name: Checkout GitHub Repository
-        uses: actions/checkout@v3  # 确保代码被拉取到 GitHub 服务器
+        uses: actions/checkout@v3  # 拉取代码到 GitHub 服务器
 
       - name: Set Up JDK 17
         uses: actions/setup-java@v3
@@ -24,10 +24,15 @@ jobs:
 
       - name: Compile Java Code
         run: |
-          cd HolidayTravelVehicles  # 进入你的 Java 代码目录
+          ls -R  # 列出所有文件，确认路径
+          cd HolidayTravelVehicles/HolidayTravelVehicles  # 进入你的 Java 代码目录
           javac -d . *.java  # 编译所有 Java 文件
 
       - name: Run Java Application
+        run: |
+          cd HolidayTravelVehicles/HolidayTravelVehicles  # 进入 Java 代码目录
+          java Main  # 运行 Main.java
+
         run: |
           cd HolidayTravelVehicles  # 进入 Java 代码目录
           java Main  # 运行 Main.java
