--- a/.github/workflows/6588122java-ci.yml
+++ b/.github/workflows/6588122java-ci.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest  # 在 GitHub Ubuntu 服务器上运行
+    runs-on: ubuntu-latest  # 在 GitHub Ubuntu 服务器上运
 
     steps:
       - name: Checkout GitHub Repository
